# goldcrest

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  client.go  default.goldcrest.yaml  dockerfile  go.mod  go.sum  http.go  server.go  twitter.go
client/go/: client.go  data.go  data_methods.go  deserialise.go  deserialize.go  error.go  request.go  util.go
client/rust/: Cargo.toml  build.rs
client/rust/src/: client.rs  data.rs  deserialize.rs  error.rs  lib.rs  optional.rs  request.rs  response.rs  serialize.rs
cmd/main/: main.go
cmd/server/: server.go
cmd/testclient/: client.go
cmd/testserver/: server.go
model/twitter/: annotation.go  entity.go  media.go  tag.go  tweet.go  tweet_includes.go  url.go  user.go  video_metrics.go
proto/: twitter.proto  twitter1.pb.go  twitter1.proto
protocol/: twitter1.pb.go  twitter1.proto
proxy/: error.go  goldcrest.go  oauth.go  oauth_test.go  proxy.go  request.go  response.go  serialise.go  serialize.go  server.go  session.go  twitter.go  util.go
proxy/model/: entities.go  media.go  search.go  time.go  tweet.go  user.go
proxy/oauth/: oauth.go  params.go  params_test.go
resources/docker/: config.yaml
rpc/: twitter.pb.go  twitter1.pb.go
server/: server.go
twitter1/: client.go  client_app_data.go  encode.go  encode_test.go  encoding.go  grpc.go  limit.go  message.go  oauth.go  rpc.go  twitter.go  user.go  user_test.go
twitter1/model/: entities.go  time.go  tweet.go  user.go
twitter2/model/: annotation.go  entity.go  media.go  tag.go  tweet.go  tweet_includes.go  url.go  user.go  (+1 more)
(+14 files in other folders)
