[package]
name = "goldcrest"
version = "0.3.1"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"

[features]
default = ["tonic-rustfmt"]
tonic-rustfmt = ["tonic-build/rustfmt"]

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = ["macros", "time"] }
chrono = "0.4"

[build-dependencies]
tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
