[package]
name = "goldcrest"
version = "0.4.0"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2021"

[features]
default = ["tonic-rustfmt"]
tonic-rustfmt = ["tonic-build/rustfmt"]

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1", features = ["macros", "time"] }
chrono = "0.4"

[build-dependencies]
tonic-build = { version = "0.6", default-features = false, features = ["transport", "prost"] }
